--- a/AviaTiketsWpfApplication/Resources/Dialogs.xaml
+++ b/AviaTiketsWpfApplication/Resources/Dialogs.xaml
@@ -23,13 +23,22 @@
                     </Hyperlink>
                 </TextBlock>
             </Label>
-            <TextBox Grid.Row="1"
-                     Margin="0, 10, 0, 0"  
-                     Height="30"    
-                     Text="{Binding Token, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged, NotifyOnValidationError=True}" 
-                     controls:TextBoxHelper.Watermark="{x:Static properties:Resources.WatermarkToken}"
-                     Foreground="{DynamicResource TextBrush}" 
-                     IsEnabled="{Binding IsUseTestTokenChecked, Converter={StaticResource BooleanInvertConverterKey}}" />
+            <Grid Grid.Row="1" Margin="0, 10, 0, 0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="70*" />
+                    <ColumnDefinition Width="30*" />
+                </Grid.ColumnDefinitions>
+                <TextBox Text="{Binding Token, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged, NotifyOnValidationError=True}" 
+                         controls:TextBoxHelper.Watermark="{x:Static properties:Resources.WatermarkToken}"
+                         Foreground="{DynamicResource TextBrush}" 
+                         IsEnabled="{Binding IsUseTestTokenChecked, Converter={StaticResource BooleanInvertConverterKey}}" />
+                <TextBox Grid.Column="1" 
+                         Margin="10, 0, 0, 0"
+                         Text="{Binding Marker, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged, NotifyOnValidationError=True}" 
+                         controls:TextBoxHelper.Watermark="{x:Static properties:Resources.WatermarkMarker}"
+                         Foreground="{DynamicResource TextBrush}" 
+                         IsEnabled="{Binding IsUseTestTokenChecked, Converter={StaticResource BooleanInvertConverterKey}}" />
+            </Grid>
             <StackPanel Grid.Row="2" Orientation="Horizontal" Margin="0, 10, 0, 0">
                 <CheckBox Margin="0, 0, 10, 0"
                           Content="{x:Static properties:Resources.SavedToken}"
