--- a/AviaTiketsWpfApplication/App.xaml
+++ b/AviaTiketsWpfApplication/App.xaml
@@ -1,27 +1,20 @@
-﻿<Application x:Class="AviaTicketsWpfApplication.App" 
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             d1p1:Ignorable="d" 
-             xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006"
-			 xmlns:views="clr-namespace:AviaTicketsWpfApplication.Views"
-             xmlns:vm="clr-namespace:AviaTicketsWpfApplication.ViewModels">
-    <Application.Resources>
-        <ResourceDictionary>
-            <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" />
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseDark.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/AviaTicketsWpfApplication;component/Resources/Icons.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/AviaTicketsWpfApplication;component/Resources/Converters.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/AviaTicketsWpfApplication;component/Resources/Dialogs.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/AviaTicketsWpfApplication;component/Resources/DataTemplates.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/AviaTicketsWpfApplication;component/Resources/Styles.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/AviaTicketsWpfApplication;component/Resources/ControlTemplates.xaml" />
-            </ResourceDictionary.MergedDictionaries>            
-		</ResourceDictionary>
-    </Application.Resources>
+<Application x:Class="AviaTicketsWpfApplication.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" d1p1:Ignorable="d" xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:views="clr-namespace:AviaTicketsWpfApplication.Views" xmlns:vm="clr-namespace:AviaTicketsWpfApplication.ViewModels">
+  <Application.Resources>
+    <ResourceDictionary>
+      <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" />
+      <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseDark.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/AviaTicketsWpfApplication;component/Resources/Icons.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/AviaTicketsWpfApplication;component/Resources/Converters.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/AviaTicketsWpfApplication;component/Resources/Dialogs.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/AviaTicketsWpfApplication;component/Resources/DataTemplates.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/AviaTicketsWpfApplication;component/Resources/Styles.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/AviaTicketsWpfApplication;component/Resources/ControlTemplates.xaml" />
+      </ResourceDictionary.MergedDictionaries>
+    </ResourceDictionary>
+  </Application.Resources>
 </Application>
